Colab を使用して作成されました

--- a/julia_day2_fin.ipynb
+++ b/julia_day2_fin.ipynb
@@ -240,7 +240,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e27197a0",
-      "metadata": {},
+      "metadata": {
+        "id": "e27197a0"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -264,7 +266,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "24157e5c",
-      "metadata": {},
+      "metadata": {
+        "id": "24157e5c"
+      },
       "outputs": [],
       "source": [
         "plot(g, -1:0.1:4, label=\"g(x) = x² - 3x + 2\",  title=\"2次関数のグラフ\",linewidth=2, color=:red)\n"
@@ -651,15 +655,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Julia 1.11.6",
-      "language": "julia",
-      "name": "julia-1.11"
+      "display_name": "Julia",
+      "name": "julia"
     },
     "language_info": {
-      "file_extension": ".jl",
-      "mimetype": "application/julia",
-      "name": "julia",
-      "version": "1.11.6"
+      "name": "julia"
     }
   },
   "nbformat": 4,
