--- a/julia_day3_fin.ipynb
+++ b/julia_day3_fin.ipynb
@@ -90,7 +90,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "c0a34628",
-      "metadata": {},
+      "metadata": {
+        "id": "c0a34628"
+      },
       "outputs": [],
       "source": [
         "# まず，関数を定義してグラフを書いて，最大値がどのあたりか確認しましょう。\n",
@@ -106,7 +108,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "8fcef1c7",
-      "metadata": {},
+      "metadata": {
+        "id": "8fcef1c7"
+      },
       "outputs": [],
       "source": [
         "# 数値的に最大値を探します。\n",
@@ -128,7 +132,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f6f5f561",
-      "metadata": {},
+      "metadata": {
+        "id": "f6f5f561"
+      },
       "outputs": [],
       "source": [
         "# グラフに最大値の点を追加してみよう\n",
@@ -140,7 +146,9 @@
     {
       "cell_type": "markdown",
       "id": "a513b29f",
-      "metadata": {},
+      "metadata": {
+        "id": "a513b29f"
+      },
       "source": [
         "#### 理論的解法との比較\n",
         "\n",
@@ -214,7 +222,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a8968f62",
-      "metadata": {},
+      "metadata": {
+        "id": "a8968f62"
+      },
       "outputs": [],
       "source": [
         "# グラフに最大・最小の点を追加してみよう\n",
@@ -226,7 +236,9 @@
     {
       "cell_type": "markdown",
       "id": "394a8fe8",
-      "metadata": {},
+      "metadata": {
+        "id": "394a8fe8"
+      },
       "source": [
         "#### 理論的解法との比較\n",
         "\n",
@@ -307,7 +319,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "7c4e7e04",
-      "metadata": {},
+      "metadata": {
+        "id": "7c4e7e04"
+      },
       "outputs": [],
       "source": [
         "\n",
@@ -325,7 +339,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "6816813a",
-      "metadata": {},
+      "metadata": {
+        "id": "6816813a"
+      },
       "outputs": [],
       "source": [
         "# 考察 x= 0のときも最大値ではないか？\n",
@@ -333,7 +349,7 @@
         "\n",
         "X = 0:0.001:π/2\n",
         "Y = h.(X)\n",
-        "@show Y |>maximum \n",
+        "@show Y |>maximum\n",
         "@show X[argmax(Y)]\n"
       ]
     },
@@ -451,7 +467,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "f1d22c90",
-      "metadata": {},
+      "metadata": {
+        "id": "f1d22c90"
+      },
       "outputs": [],
       "source": [
         "# 2. 数値的に最小値と最小値を与える $x$ を求め，文章でアウトプット\n"
@@ -461,7 +479,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e15bf100",
-      "metadata": {},
+      "metadata": {
+        "id": "e15bf100"
+      },
       "outputs": [],
       "source": [
         "#3. グラフに最小値の位置の点をプロット\n"
@@ -494,7 +514,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "057ed048",
-      "metadata": {},
+      "metadata": {
+        "id": "057ed048"
+      },
       "outputs": [],
       "source": [
         "# 2. 区間内での最大値・最小値を数値的に求める\n"
@@ -504,7 +526,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a27877cf",
-      "metadata": {},
+      "metadata": {
+        "id": "a27877cf"
+      },
       "outputs": [],
       "source": [
         "# 3. グラフに最大値・最小値の位置の点をプロット\n"
@@ -514,7 +538,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "a8416d57",
-      "metadata": {},
+      "metadata": {
+        "id": "a8416d57"
+      },
       "outputs": [],
       "source": [
         "# 4. その他に最大・最小となる点はあるか考察しよう。\n"
@@ -547,7 +573,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "43c16095",
-      "metadata": {},
+      "metadata": {
+        "id": "43c16095"
+      },
       "outputs": [],
       "source": [
         "# 2. 区間内での最小値を数値的に求める\n"
@@ -557,7 +585,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "d091511f",
-      "metadata": {},
+      "metadata": {
+        "id": "d091511f"
+      },
       "outputs": [],
       "source": [
         "# 3. グラフに最小値の位置の点をプロット\n"
@@ -567,7 +597,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "5335c834",
-      "metadata": {},
+      "metadata": {
+        "id": "5335c834"
+      },
       "outputs": [],
       "source": [
         "# 4. 考察（理論的にもとまるかな？）\n"
@@ -619,7 +651,9 @@
     {
       "cell_type": "markdown",
       "id": "83f5f47f",
-      "metadata": {},
+      "metadata": {
+        "id": "83f5f47f"
+      },
       "source": []
     }
   ],
@@ -628,15 +662,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Julia 1.11.6",
-      "language": "julia",
-      "name": "julia-1.11"
+      "display_name": "Julia",
+      "name": "julia"
     },
     "language_info": {
-      "file_extension": ".jl",
-      "mimetype": "application/julia",
-      "name": "julia",
-      "version": "1.11.6"
+      "name": "julia"
     }
   },
   "nbformat": 4,
