--- a/julia_day5_fin.ipynb
+++ b/julia_day5_fin.ipynb
@@ -62,7 +62,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "b9b451c5",
-      "metadata": {},
+      "metadata": {
+        "id": "b9b451c5"
+      },
       "outputs": [],
       "source": [
         "# パッケージのインストール（初回のみ実行）\n",
@@ -186,9 +188,9 @@
         "end\n",
         "\n",
         "# グラフを描画\n",
-        "plot(1:n_max, cumulative_prob, \n",
-        "     title=\"コイン投げの確率の収束\", \n",
-        "     xlabel=\"試行回数\", \n",
+        "plot(1:n_max, cumulative_prob,\n",
+        "     title=\"コイン投げの確率の収束\",\n",
+        "     xlabel=\"試行回数\",\n",
         "     ylabel=\"表が出る確率\",\n",
         "     color=:blue, linewidth=2, label=\"シミュレーション結果\")\n",
         "\n",
@@ -252,9 +254,9 @@
       "outputs": [],
       "source": [
         "# サイコロの結果をヒストグラムで表示\n",
-        "histogram(dice_results, bins=0.5:1:6.5, \n",
-        "         title=\"サイコロの目の分布 ($(n_rolls)回)\", \n",
-        "         xlabel=\"サイコロの目\", \n",
+        "histogram(dice_results, bins=0.5:1:6.5,\n",
+        "         title=\"サイコロの目の分布 ($(n_rolls)回)\",\n",
+        "         xlabel=\"サイコロの目\",\n",
         "         ylabel=\"出現回数\",\n",
         "         color=:orange,\n",
         "         alpha=0.7,\n",
@@ -320,9 +322,9 @@
       "outputs": [],
       "source": [
         "# 2つのサイコロの和のヒストグラム\n",
-        "histogram(sums, bins=1.5:1:12.5, \n",
-        "         title=\"2つのサイコロの和の分布\", \n",
-        "         xlabel=\"サイコロの和\", \n",
+        "histogram(sums, bins=1.5:1:12.5,\n",
+        "         title=\"2つのサイコロの和の分布\",\n",
+        "         xlabel=\"サイコロの和\",\n",
         "         ylabel=\"出現回数\",\n",
         "         color=:green,\n",
         "         alpha=0.7,\n",
@@ -332,7 +334,7 @@
         "# 理論値をプロット\n",
         "theoretical_x = 2:12\n",
         "theoretical_y = [theoretical_probs[s] for s in theoretical_x]\n",
-        "plot!(theoretical_x, theoretical_y, \n",
+        "plot!(theoretical_x, theoretical_y,\n",
         "      color=:red, linewidth=3, marker=:circle, markersize=6,\n",
         "      label=\"理論値\")"
       ]
@@ -404,12 +406,12 @@
         "    if n > 365\n",
         "        return 1.0\n",
         "    end\n",
-        "    \n",
+        "\n",
         "    prob_no_collision = 1.0\n",
         "    for i in 0:(n-1)\n",
         "        prob_no_collision *= (365 - i) / 365\n",
         "    end\n",
-        "    \n",
+        "\n",
         "    return 1 - prob_no_collision\n",
         "end\n",
         "\n",
@@ -435,14 +437,14 @@
       "outputs": [],
       "source": [
         "# 誕生日パラドックスの可視化\n",
-        "plot(people_counts, probabilities, \n",
+        "plot(people_counts, probabilities,\n",
         "     marker=:circle, markersize=6, linewidth=2, color=:blue,\n",
-        "     title=\"誕生日パラドックス\", \n",
-        "     xlabel=\"クラスの人数\", \n",
+        "     title=\"誕生日パラドックス\",\n",
+        "     xlabel=\"クラスの人数\",\n",
         "     ylabel=\"同じ誕生日の人がいる確率\",\n",
         "     label=\"シミュレーション結果\")\n",
         "\n",
-        "plot!(people_counts, theoretical_probs, \n",
+        "plot!(people_counts, theoretical_probs,\n",
         "      linewidth=3, color=:red, linestyle=:dash,\n",
         "      label=\"理論値\")\n",
         "\n",
@@ -450,8 +452,8 @@
         "hline!([0.5], color=:gray, linestyle=:dot, alpha=0.7, label=\"50%ライン\")\n",
         "\n",
         "# 23人のポイントを強調\n",
-        "scatter!([23], [birthday_theory(23)], \n",
-        "         markersize=10, color=:orange, \n",
+        "scatter!([23], [birthday_theory(23)],\n",
+        "         markersize=10, color=:orange,\n",
         "         label=\"23人 ($(round(birthday_theory(23)*100, digits=1))%)\")"
       ]
     },
@@ -481,17 +483,17 @@
         "# モンテカルロ法でπを計算\n",
         "function estimate_pi(n_points)\n",
         "    inside_circle = 0\n",
-        "    \n",
+        "\n",
         "    for _ in 1:n_points\n",
         "        x = rand() * 2 - 1  # -1から1の範囲\n",
         "        y = rand() * 2 - 1  # -1から1の範囲\n",
-        "        \n",
+        "\n",
         "        # 原点からの距離が1以下なら円の内部\n",
         "        if x^2 + y^2 <= 1\n",
         "            inside_circle += 1\n",
         "        end\n",
         "    end\n",
-        "    \n",
+        "\n",
         "    # π ≈ 4 × (円内の点の数) / (全体の点の数)\n",
         "    return 4 * inside_circle / n_points\n",
         "end\n",
@@ -531,7 +533,7 @@
         "    y = rand() * 2 - 1\n",
         "    push!(x_points, x)\n",
         "    push!(y_points, y)\n",
-        "    \n",
+        "\n",
         "    # 円の内部なら青、外部なら赤\n",
         "    if x^2 + y^2 <= 1\n",
         "        push!(colors, :blue)\n",
@@ -541,9 +543,9 @@
         "end\n",
         "\n",
         "# 散布図をプロット\n",
-        "scatter(x_points, y_points, \n",
+        "scatter(x_points, y_points,\n",
         "        color=colors, markersize=2, alpha=0.6,\n",
-        "        title=\"モンテカルロ法による円周率計算\", \n",
+        "        title=\"モンテカルロ法による円周率計算\",\n",
         "        xlabel=\"x\", ylabel=\"y\",\n",
         "        aspect_ratio=:equal,\n",
         "        label=\"ランダム点\")\n",
@@ -555,7 +557,7 @@
         "plot!(circle_x, circle_y, color=:black, linewidth=3, label=\"単位円\")\n",
         "\n",
         "# 正方形の枠を描画\n",
-        "plot!([-1, 1, 1, -1, -1], [-1, -1, 1, 1, -1], \n",
+        "plot!([-1, 1, 1, -1, -1], [-1, -1, 1, 1, -1],\n",
         "      color=:black, linewidth=2, linestyle=:dash, label=\"正方形\")"
       ]
     },
@@ -569,10 +571,10 @@
       "outputs": [],
       "source": [
         "# πの推定値の収束を可視化\n",
-        "plot(point_counts, pi_estimates, \n",
+        "plot(point_counts, pi_estimates,\n",
         "     marker=:circle, markersize=6, linewidth=2, color=:green,\n",
-        "     title=\"モンテカルロ法によるπの収束\", \n",
-        "     xlabel=\"使用した点の数\", \n",
+        "     title=\"モンテカルロ法によるπの収束\",\n",
+        "     xlabel=\"使用した点の数\",\n",
         "     ylabel=\"πの推定値\",\n",
         "     xscale=:log10,\n",
         "     label=\"推定値\")\n",
@@ -672,7 +674,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "3b0c8a49",
-      "metadata": {},
+      "metadata": {
+        "id": "3b0c8a49"
+      },
       "outputs": [],
       "source": [
         "# 2. 10000回のジャンケンをシミュレーション\n"
@@ -682,7 +686,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "aebdd7f9",
-      "metadata": {},
+      "metadata": {
+        "id": "aebdd7f9"
+      },
       "outputs": [],
       "source": [
         "# 3. あいこになる確率を計算\n"
@@ -692,7 +698,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "d2ff2922",
-      "metadata": {},
+      "metadata": {
+        "id": "d2ff2922"
+      },
       "outputs": [],
       "source": [
         "# 4. 理論値（1/3）と比較\n"
@@ -727,7 +735,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "bf0800bd",
-      "metadata": {},
+      "metadata": {
+        "id": "bf0800bd"
+      },
       "outputs": [],
       "source": [
         "# 2. 最大値が6になる場合をカウント\n"
@@ -737,7 +747,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "039bcbc9",
-      "metadata": {},
+      "metadata": {
+        "id": "039bcbc9"
+      },
       "outputs": [],
       "source": [
         "# 3. ヒストグラムで最大値の分布を可視化\n",
@@ -748,7 +760,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9afecd50",
-      "metadata": {},
+      "metadata": {
+        "id": "9afecd50"
+      },
       "outputs": [],
       "source": [
         "# 4. 理論値と比較（ヒント：最大値が6になるのは、少なくとも1つが6の場合）\n"
@@ -789,7 +803,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "dd0d025f",
-      "metadata": {},
+      "metadata": {
+        "id": "dd0d025f"
+      },
       "outputs": [],
       "source": [
         "# **B. ランダムウォーク**\n",
@@ -802,7 +818,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "409011cf",
-      "metadata": {},
+      "metadata": {
+        "id": "409011cf"
+      },
       "outputs": [],
       "source": [
         "# **C. オリジナル問題**\n",
@@ -911,15 +929,11 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Julia 1.11.6",
-      "language": "julia",
-      "name": "julia-1.11"
+      "display_name": "Julia",
+      "name": "julia"
     },
     "language_info": {
-      "file_extension": ".jl",
-      "mimetype": "application/julia",
-      "name": "julia",
-      "version": "1.11.6"
+      "name": "julia"
     }
   },
   "nbformat": 4,
