Colab を使用して作成されました

--- a/ans/julia_day2_ans.ipynb
+++ b/ans/julia_day2_ans.ipynb
@@ -64,10 +64,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "basic_function",
       "metadata": {
-        "id": "basic_function"
+        "id": "basic_function",
+        "outputId": "272653cb-3d9d-4362-af34-c7c770dba3fc"
       },
       "outputs": [
         {
@@ -87,10 +88,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "test_function",
       "metadata": {
-        "id": "test_function"
+        "id": "test_function",
+        "outputId": "c72be058-c126-40e3-dfa4-e772e1e00de5"
       },
       "outputs": [
         {
@@ -110,10 +112,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "quadratic_function",
       "metadata": {
-        "id": "quadratic_function"
+        "id": "quadratic_function",
+        "outputId": "df754cd6-a043-452f-b6c0-fbcbc3349390"
       },
       "outputs": [
         {
@@ -136,7 +139,8 @@
       "execution_count": null,
       "id": "test_quadratic",
       "metadata": {
-        "id": "test_quadratic"
+        "id": "test_quadratic",
+        "outputId": "52ac11d9-a450-48fb-c632-bc825d5f7caa"
       },
       "outputs": [
         {
@@ -169,10 +173,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "trig_function",
       "metadata": {
-        "id": "trig_function"
+        "id": "trig_function",
+        "outputId": "757acbea-2c21-4bc1-e46f-80e22341a003"
       },
       "outputs": [
         {
@@ -192,10 +197,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "test_trig",
       "metadata": {
-        "id": "test_trig"
+        "id": "test_trig",
+        "outputId": "1efad1e1-889e-4a34-a4d9-dea6d0fa10dc"
       },
       "outputs": [
         {
@@ -255,10 +261,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "load_plots",
       "metadata": {
-        "id": "load_plots"
+        "id": "load_plots",
+        "outputId": "35d3b551-7469-4e90-c96f-c365c652c613"
       },
       "outputs": [
         {
@@ -276,7 +283,10 @@
         "using Plots\n",
         "\n",
         "# フォント設定（日本語ラベルのため）\n",
-        "gr(fontfamily=\"ipam\")"
+        "using Pkg\n",
+        "Pkg.add(url=\"https://github.com/ujimushi/PlotsGRBackendFontJaEmoji.jl\")\n",
+        "using PlotsGRBackendFontJaEmoji\n",
+        "gr()"
       ]
     },
     {
@@ -313,10 +323,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "first_linear_plot",
       "metadata": {
-        "id": "first_linear_plot"
+        "id": "first_linear_plot",
+        "outputId": "b11825f6-1fe5-48b9-a4be-153e62e5cca0"
       },
       "outputs": [
         {
@@ -486,9 +497,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "e27197a0",
-      "metadata": {},
+      "metadata": {
+        "id": "e27197a0",
+        "outputId": "0ca8b025-510c-4755-aedb-d05cc0439a25"
+      },
       "outputs": [
         {
           "data": {
@@ -693,10 +707,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "quadratic_plot",
       "metadata": {
-        "id": "quadratic_plot"
+        "id": "quadratic_plot",
+        "outputId": "521810b3-14a7-468e-a747-09e8b6b912c8"
       },
       "outputs": [
         {
@@ -876,9 +891,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "24157e5c",
-      "metadata": {},
+      "metadata": {
+        "id": "24157e5c",
+        "outputId": "df7957c6-3a85-49c4-cf74-63932533bf6f"
+      },
       "outputs": [
         {
           "data": {
@@ -1124,10 +1142,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "multiple_functions",
       "metadata": {
-        "id": "multiple_functions"
+        "id": "multiple_functions",
+        "outputId": "2603e0fd-74e8-4d1c-847f-b3de3ce2eb8d"
       },
       "outputs": [
         {
@@ -1372,10 +1391,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "parabola_family",
       "metadata": {
-        "id": "parabola_family"
+        "id": "parabola_family",
+        "outputId": "9da004a0-56ce-4ce3-c5e3-48980e90de2a"
       },
       "outputs": [
         {
@@ -1640,10 +1660,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "basic_trig",
       "metadata": {
-        "id": "basic_trig"
+        "id": "basic_trig",
+        "outputId": "f9c37ac9-9920-4571-b141-95392075612f"
       },
       "outputs": [
         {
@@ -1870,10 +1891,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "modified_trig",
       "metadata": {
-        "id": "modified_trig"
+        "id": "modified_trig",
+        "outputId": "0e789276-1e2a-4cd7-bda2-d6c46561b991"
       },
       "outputs": [
         {
@@ -2138,10 +2160,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "id": "exponential_log",
       "metadata": {
-        "id": "exponential_log"
+        "id": "exponential_log",
+        "outputId": "df66be21-0126-418d-9d14-dce08e48863c"
       },
       "outputs": [
         {
@@ -2404,10 +2427,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "id": "complex_functions",
       "metadata": {
-        "id": "complex_functions"
+        "id": "complex_functions",
+        "outputId": "b592f25d-4037-4652-9059-179a27f237b1"
       },
       "outputs": [
         {
@@ -2642,10 +2666,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "damped_oscillation",
       "metadata": {
-        "id": "damped_oscillation"
+        "id": "damped_oscillation",
+        "outputId": "56263521-33a6-4a58-c21d-0b46c55c59cc"
       },
       "outputs": [
         {
@@ -2859,10 +2884,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "absolute_sine",
       "metadata": {
-        "id": "absolute_sine"
+        "id": "absolute_sine",
+        "outputId": "7374fadf-8419-4fe0-9d77-5459ba426607"
       },
       "outputs": [
         {
@@ -3160,10 +3186,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "answer1_code",
       "metadata": {
-        "id": "answer1_code"
+        "id": "answer1_code",
+        "outputId": "ba3d234d-a356-48c4-c9b6-e74a4d1fe283"
       },
       "outputs": [
         {
@@ -3392,10 +3419,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "id": "answer2_code",
       "metadata": {
-        "id": "answer2_code"
+        "id": "answer2_code",
+        "outputId": "7e7a877e-3b8f-41b7-e688-1c8e2154a5ac"
       },
       "outputs": [
         {
@@ -3592,10 +3620,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "answer3_code",
       "metadata": {
-        "id": "answer3_code"
+        "id": "answer3_code",
+        "outputId": "7d85373a-b0b8-4ec3-a74f-f79016e42cf0"
       },
       "outputs": [
         {
