Colab を使用して作成されました

--- a/julia_day1_fin.ipynb
+++ b/julia_day1_fin.ipynb
@@ -793,7 +793,7 @@
       "outputs": [],
       "source": [
         "# 問題1: (2√3+1)(√3-4) をそのままJuliaで計算してみましょう。\n",
-        "# 1. まず，そのままJuliade計算しよう！\n",
+        "# 1. まず，そのままJuliaで計算しよう！\n",
         "\n"
       ]
     },
@@ -843,7 +843,7 @@
       },
       "outputs": [],
       "source": [
-        "# 問題2: x=2+√7, y=2-√7 のとき x³+xy+y³ を求める\n",
+        "# 問題2: x=2+√7, y=3-√7 のとき x³+xy+y³ を求める\n",
         "# 1. xとyの値を定義して，そのままJuliaで計算しよう。\n",
         "\n"
       ]
@@ -858,7 +858,7 @@
       "outputs": [],
       "source": [
         "# 2. 次に，自分で工夫して x³+xy+y³ を計算して，その結果をJuliaで評価してみよう。\n",
-        "# x+y = 4\n",
+        "# x+y = 5\n",
         "# xy = (2+√7)(3-√7)=√7-1\n",
         "# x^3+xy+y^3 = (x+y)^3-3xy(x+y)+xy\n",
         "\n"
