Colab を使用して作成されました

--- a/julia_day3_fin.ipynb
+++ b/julia_day3_fin.ipynb
@@ -67,7 +67,10 @@
         "using Plots\n",
         "\n",
         "# フォント設定（日本語ラベルのため）\n",
-        "gr(fontfamily=\"ipam\")\n",
+        "using Pkg\n",
+        "Pkg.add(url=\"https://github.com/ujimushi/PlotsGRBackendFontJaEmoji.jl\")\n",
+        "using PlotsGRBackendFontJaEmoji\n",
+        "gr()\n",
         "\n",
         "println(\"パッケージの読み込み完了！\")"
       ]
