--- a/ans/julia_day4_ans.ipynb
+++ b/ans/julia_day4_ans.ipynb
@@ -61,7 +61,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "85364200",
-      "metadata": {},
+      "metadata": {
+        "id": "85364200",
+        "outputId": "07c486b6-b370-4532-fac2-ff20840c8cdb"
+      },
       "outputs": [
         {
           "name": "stderr",
@@ -82,10 +85,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": null,
       "id": "load_packages",
       "metadata": {
-        "id": "load_packages"
+        "id": "load_packages",
+        "outputId": "0ce2ff51-cd0b-4c92-88c5-0a291e9a2231"
       },
       "outputs": [
         {
@@ -104,9 +108,11 @@
         "using Random           # 乱数生成\n",
         "using StatsPlots       # 統計グラフ作成(boxplot)\n",
         "\n",
-        "\n",
         "# フォント設定（日本語ラベルのため）\n",
-        "gr(fontfamily=\"ipam\")\n",
+        "using Pkg\n",
+        "Pkg.add(url=\"https://github.com/ujimushi/PlotsGRBackendFontJaEmoji.jl\")\n",
+        "using PlotsGRBackendFontJaEmoji\n",
+        "gr()\n",
         "\n",
         "# 乱数のシードを設定（結果を再現可能にする）\n",
         "Random.seed!(42)\n",
@@ -130,10 +136,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "sample_data",
       "metadata": {
-        "id": "sample_data"
+        "id": "sample_data",
+        "outputId": "62fe0b88-3c52-4939-8e4d-ed3d48513bce"
       },
       "outputs": [
         {
@@ -155,10 +162,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "descriptive_stats",
       "metadata": {
-        "id": "descriptive_stats"
+        "id": "descriptive_stats",
+        "outputId": "324cc304-d98e-40f8-c4bc-d4edd15df467"
       },
       "outputs": [
         {
@@ -216,10 +224,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "id": "basic_histogram",
       "metadata": {
-        "id": "basic_histogram"
+        "id": "basic_histogram",
+        "outputId": "a85d6f9b-6481-4754-98b3-e1931324da64"
       },
       "outputs": [
         {
@@ -520,9 +529,9 @@
       ],
       "source": [
         "# 基本的なヒストグラム\n",
-        "histogram(test_scores, bins=5, \n",
-        "         title=\"数学テストの点数分布\", \n",
-        "         xlabel=\"点数\", \n",
+        "histogram(test_scores, bins=5,\n",
+        "         title=\"数学テストの点数分布\",\n",
+        "         xlabel=\"点数\",\n",
         "         ylabel=\"人数\",\n",
         "         color=:skyblue,\n",
         "         linewidth=2,\n",
@@ -552,10 +561,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "id": "study_data",
       "metadata": {
-        "id": "study_data"
+        "id": "study_data",
+        "outputId": "e9f28f6f-55fa-41b2-c522-70643396b737"
       },
       "outputs": [
         {
@@ -847,9 +857,9 @@
         "println(\"学習時間と成績の相関係数：\", round(correlation, digits=3))\n",
         "\n",
         "# 散布図の作成\n",
-        "scatter(study_hours, exam_scores, \n",
-        "        title=\"学習時間と試験成績の関係\", \n",
-        "        xlabel=\"学習時間 (時間)\", \n",
+        "scatter(study_hours, exam_scores,\n",
+        "        title=\"学習時間と試験成績の関係\",\n",
+        "        xlabel=\"学習時間 (時間)\",\n",
         "        ylabel=\"試験成績 (点)\",\n",
         "        color=:blue,\n",
         "        markersize=6,\n",
@@ -859,10 +869,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "id": "regression_line",
       "metadata": {
-        "id": "regression_line"
+        "id": "regression_line",
+        "outputId": "d4440f27-6094-4f39-b635-a86263df71f4"
       },
       "outputs": [
         {
@@ -1182,9 +1193,9 @@
         "println(\"回帰直線の方程式：y = \", round(slope, digits=2), \"x + \", round(intercept, digits=2))\n",
         "\n",
         "# 散布図と回帰直線を描画\n",
-        "scatter(study_hours, exam_scores, \n",
-        "        title=\"学習時間と試験成績の関係（回帰直線付き）\", \n",
-        "        xlabel=\"学習時間 (時間)\", \n",
+        "scatter(study_hours, exam_scores,\n",
+        "        title=\"学習時間と試験成績の関係（回帰直線付き）\",\n",
+        "        xlabel=\"学習時間 (時間)\",\n",
         "        ylabel=\"試験成績 (点)\",\n",
         "        color=:blue,\n",
         "        markersize=6,\n",
@@ -1213,10 +1224,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "id": "class_comparison",
       "metadata": {
-        "id": "class_comparison"
+        "id": "class_comparison",
+        "outputId": "9d883464-dd38-4e67-f6a6-fdf246e7a401"
       },
       "outputs": [
         {
@@ -1256,7 +1268,8 @@
       "execution_count": null,
       "id": "comparison_plots",
       "metadata": {
-        "id": "comparison_plots"
+        "id": "comparison_plots",
+        "outputId": "89b33195-b2ea-4788-d82e-028a4cac0f31"
       },
       "outputs": [
         {
@@ -2099,11 +2112,11 @@
         "max_score = max(maximum(class_a), maximum(class_b))\n",
         "bin_edges = min_score:2:max_score  # 2点刻みで階級を設定\n",
         "\n",
-        "p1 = histogram(class_a, bins=bin_edges, alpha=0.7, color=:blue, \n",
+        "p1 = histogram(class_a, bins=bin_edges, alpha=0.7, color=:blue,\n",
         "              title=\"Aクラスの成績分布\", xlabel=\"点数\", ylabel=\"人数\", label=\"Aクラス\")\n",
         "vline!([mean(class_a)], color=:red, linewidth=3, label=\"平均値\")\n",
         "\n",
-        "p2 = histogram(class_b, bins=bin_edges, alpha=0.7, color=:green, \n",
+        "p2 = histogram(class_b, bins=bin_edges, alpha=0.7, color=:green,\n",
         "              title=\"Bクラスの成績分布\", xlabel=\"点数\", ylabel=\"人数\", label=\"Bクラス\")\n",
         "vline!([mean(class_b)], color=:red, linewidth=3, label=\"平均値\")\n",
         "\n",
@@ -2130,10 +2143,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": null,
       "id": "ice_cream_data",
       "metadata": {
-        "id": "ice_cream_data"
+        "id": "ice_cream_data",
+        "outputId": "bafe9dbf-ae15-4d0f-ff87-f9eb765f721a"
       },
       "outputs": [
         {
@@ -2182,10 +2196,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": null,
       "id": "ice_cream_analysis",
       "metadata": {
-        "id": "ice_cream_analysis"
+        "id": "ice_cream_analysis",
+        "outputId": "7bf24c3d-1eea-4ced-a035-824ee142a815"
       },
       "outputs": [
         {
@@ -2867,15 +2882,15 @@
       ],
       "source": [
         "# データの可視化\n",
-        "p1 = plot(days, temperatures, \n",
+        "p1 = plot(days, temperatures,\n",
         "         title=\"日別気温の変化\", xlabel=\"日\", ylabel=\"気温 (℃)\",\n",
         "         color=:red, linewidth=2, marker=:circle, markersize=4, label=\"気温\")\n",
         "\n",
-        "p2 = plot(days, sales, \n",
+        "p2 = plot(days, sales,\n",
         "         title=\"日別売上の変化\", xlabel=\"日\", ylabel=\"売上 (円)\",\n",
         "         color=:blue, linewidth=2, marker=:circle, markersize=4, label=\"売上\")\n",
         "\n",
-        "p3 = scatter(temperatures, sales, \n",
+        "p3 = scatter(temperatures, sales,\n",
         "            title=\"気温と売上の関係\", xlabel=\"気温 (℃)\", ylabel=\"売上 (円)\",\n",
         "            color=:green, markersize=6, alpha=0.7, label=\"データ点\")\n",
         "\n",
@@ -2908,7 +2923,7 @@
         "以下のデータは、ある高校の生徒20人の身長（cm）です：\n",
         "\n",
         "```\n",
-        "heights = [165, 170, 168, 172, 160, 175, 169, 171, 167, 173, \n",
+        "heights = [165, 170, 168, 172, 160, 175, 169, 171, 167, 173,\n",
         "           162, 174, 166, 168, 170, 169, 171, 164, 172, 167]\n",
         "```\n",
         "\n",
@@ -2957,10 +2972,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": null,
       "id": "answer1_code",
       "metadata": {
-        "id": "answer1_code"
+        "id": "answer1_code",
+        "outputId": "1e959073-d206-4a0a-887e-a7dd1cddafcb"
       },
       "outputs": [
         {
@@ -2984,7 +3000,7 @@
       ],
       "source": [
         "# 問題1: 身長データの統計分析\n",
-        "heights = [165, 170, 168, 172, 160, 175, 169, 171, 167, 173, \n",
+        "heights = [165, 170, 168, 172, 160, 175, 169, 171, 167, 173,\n",
         "           162, 174, 166, 168, 170, 169, 171, 164, 172, 167]\n",
         "\n",
         "# 1. 平均身長、中央値、標準偏差を計算してください\n",
@@ -2998,7 +3014,10 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "9b35f015",
-      "metadata": {},
+      "metadata": {
+        "id": "9b35f015",
+        "outputId": "ade50d78-2ec6-4f39-e818-ad5054726259"
+      },
       "outputs": [
         {
           "data": {
@@ -3227,9 +3246,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": null,
       "id": "ab066f20",
-      "metadata": {},
+      "metadata": {
+        "id": "ab066f20",
+        "outputId": "b496f6da-398b-4153-f694-7d2d5c97f28a"
+      },
       "outputs": [
         {
           "data": {
@@ -3500,9 +3522,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": null,
       "id": "f828c348",
-      "metadata": {},
+      "metadata": {
+        "id": "f828c348",
+        "outputId": "4a175668-cc49-48b8-d359-5c3ae096d64a"
+      },
       "outputs": [
         {
           "data": {
@@ -3735,10 +3760,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "id": "answer2_code",
       "metadata": {
-        "id": "answer2_code"
+        "id": "answer2_code",
+        "outputId": "6aa8942b-9b1d-46ca-f880-f0d924baeda8"
       },
       "outputs": [
         {
@@ -3765,9 +3791,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "id": "e501aea2",
-      "metadata": {},
+      "metadata": {
+        "id": "e501aea2",
+        "outputId": "6c891ca0-e1b0-4c41-e00f-075b37c4e6b6"
+      },
       "outputs": [
         {
           "data": {
@@ -4014,9 +4043,9 @@
         "# 2. 散布図を作成して、2つの科目の関係を可視化してください\n",
         "\n",
         "# 散布図の作成\n",
-        "scatter(math_scores, physics_scores, \n",
-        "        title=\"数学と物理の成績の関係\", \n",
-        "        xlabel=\"数学 (点)\", \n",
+        "scatter(math_scores, physics_scores,\n",
+        "        title=\"数学と物理の成績の関係\",\n",
+        "        xlabel=\"数学 (点)\",\n",
         "        ylabel=\"物理 (点)\",\n",
         "        color=:blue,\n",
         "        markersize=6,\n",
@@ -4026,9 +4055,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": null,
       "id": "69908fc5",
-      "metadata": {},
+      "metadata": {
+        "id": "69908fc5",
+        "outputId": "a019a022-7811-4234-dbf4-bdad932fe254"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -4310,9 +4342,9 @@
         "println(\"回帰直線の方程式：y = \", round(slope, digits=2), \"x + \", round(intercept, digits=2))\n",
         "\n",
         "# 散布図と回帰直線を描画\n",
-        "scatter(math_scores, physics_scores, \n",
-        "        title=\"数学と物理の成績の関係\", \n",
-        "        xlabel=\"数学 (点)\", \n",
+        "scatter(math_scores, physics_scores,\n",
+        "        title=\"数学と物理の成績の関係\",\n",
+        "        xlabel=\"数学 (点)\",\n",
         "        ylabel=\"物理 (点)\",\n",
         "        color=:blue,\n",
         "        markersize=6,\n",
@@ -4328,7 +4360,9 @@
     {
       "cell_type": "markdown",
       "id": "16d600a4",
-      "metadata": {},
+      "metadata": {
+        "id": "16d600a4"
+      },
       "source": [
         "4. 散布図や回帰直線から，どのようなことがわかりますか？また，数学と物理の学習に役立てるにはどうすればいいですか？\n",
         "（自由に書いてみましょう）\n",
